fixed ppage alignment

--- a/style.scss
+++ b/style.scss
@@ -256,7 +256,7 @@ footer h4 {
 }
 
 .btn-success {
-    margin-top: 15px;
+    margin-top: 20px;
     background-color: $primary-color;
     border: 2px solid $primary-color;
     width: 100%;
